# s5x

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: config.rs  main.rs  mode.rs  prelude.rs
client/src/http/: core.rs  method.rs  mod.rs
client/src/socks5/: config.rs  mod.rs  session.rs
client/src/tun/: dns_resolver.rs  fake_dns.rs  mod.rs  routing.rs  session.rs
lib/: Cargo.toml
lib/src/: atyp.rs  colorize.rs  config.rs  consts.rs  errors.rs  lib.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs  prelude.rs
server/src/socks5/: config.rs  mod.rs  parse.rs  session.rs
tests/: client.rs  client_cli.rs  client_proxy.rs  server.rs
tests/support/: mod.rs  test_client.rs  test_server.rs
