[package]
name = "s5t"
version = "0.1.0"
description = "client for s5x crate"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

s5l = { workspace = true }
tokio-rustls = "0.26.4"
rustls = "0.23.40"
webpki-roots = "1.0.7"
tun = "0.8.11"
tokio-util = "0.7.18"
etherparse = "0.20.2"
netlink-packet-route = "0.31.0"
netlink-packet-core = "0.8.1"
netlink-sys = "0.8.8"
hickory-proto = "0.26.1"
iptables = "0.6.0"

[[bin]]
name = "s5t"
path = "src/main.rs"
test = true

[[test]]
name = "client"
path = "../tests/client.rs"
